--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "rettiwt-api",
 	"version": "1.1.2",
-	"main": "dist/index.js",
+	"main": "dist/index.ts",
 	"types": "dist/index.d.ts",
 	"description": "An API for fetching data from TwitterAPI, without any rate limits!",
 	"scripts": {
